# Movie-Recommendation-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  architecture.md  commands.txt  connect.py  pyproject.toml  render.yaml  requirement.txt  requirements.txt
.github/workflows/: ci.yml
chroma_storage/38a66957-1446-4646-9e2a-98c03f28dc8f/: index_metadata.pickle
chroma_storage/73fb292d-a670-429c-aa5c-60b837c983e1/: index_metadata.pickle
data/processed/: movies_processed.parquet
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  appwrite.js  index.css  main.jsx
frontend/src/components/: MovieCard.jsx  MovieDetailModal.jsx  Search.jsx
frontend/src/hooks/: useRecommendations.js
frontend/src/lib/: auth.js
frontend/src/pages/: AIPage.jsx  AuthPage.jsx  Dashboard.jsx  GenrePage.jsx
scripts/: build_index.py  download_movielens.py  run_dev.py  smoke_test_movielens.py  test_pipeline.py
src/movie_recommender/: config.py  logging_config.py
src/movie_recommender/api/: main.py
src/movie_recommender/data/: movielens_loader.py  preprocess.py
src/movie_recommender/db/: __init__.py  sqlite_store.py  store.py
src/movie_recommender/embeddings/: embedder.py
src/movie_recommender/llm/: ollama_client.py
src/movie_recommender/media/: cloudinary_store.py
src/movie_recommender/recommender/: pipeline.py  rerank.py  retrieve.py
src/movie_recommender/vector_db/: chroma_client.py  qdrant_client.py
tests/: test_loader.py
