[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommender"
version = "0.1.0"
description = "Movie recommender using MovieLens + Qdrant + Ollama"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "tqdm",
  "requests",
  "qdrant-client",
  "sentence-transformers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
